FIXED : topic tags issue on home page, view on safari was breaking at spaces

--- a/public/assets/css/header.scss
+++ b/public/assets/css/header.scss
@@ -234,6 +234,7 @@
       border-radius: 8px;
       vertical-align: middle;
       text-wrap: nowrap;
+      white-space: nowrap;
 
       &.active {
         background-color: $theme-color !important;
